<?xml version="1.0"?>
<package format="3">
  <name>dr_spaam_ros2</name>
  <version>0.0.0</version>
  <description>Package for detecting pedestrians using DROW3 or DR-SPAAM in ROS 2.</description>
  <maintainer email="jyao073@ucr.edu">jyao97</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>ament_cmake</build_depend>
  
  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>dr_spaam</exec_depend>
  <exec_depend>numpy</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
