<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gensafenav_ros2_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for GenSafeNav - launches complete perception and prediction pipeline</description>
  <maintainer email="1783866380@qq.com">hyz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies for all nodes -->
  <exec_depend>dr_spaam_ros2</exec_depend>
  <exec_depend>sort_tracker</exec_depend>
  <exec_depend>predictor</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
