<?xml version="1.0"?>
<package format="3">
  <name>predictor</name>
  <version>0.0.0</version>
  <description>Package for tracking objects using SORT in ROS 2.</description>
  <maintainer email="jyao073@ucr.edu">jyao97</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Build Dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime Dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>numpy</depend>

  <!-- Test Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
